<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application name string(s) -->
    <string name="app_name">ChroBars</string>
    
    <!-- Menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About ChroBars</string>
    <string name="menu_mode_switch">Switch Mode</string>
    <string name="menu_mode_stopwatch">Stopwatch</string>
    <string name="menu_mode_timer">Countdown Timer</string>
    
    <!-- Settings strings -->
    <string name="settings_title">ChroBars Settings</string>
    <string name="settings_bars_dropdown_title_chrobars">ChroBars</string>
    <string name="settings_bars_dropdown_title_general">General</string>
    <string name="settings_general_precision">Motion Precision</string>
    <string name="settings_bars_type">ChroBar</string>
    <string name="settings_bar_visible">Visible?</string>
    <string name="settings_number_visible">Number?</string>
    <string name="settings_bars_pick_color">Bar Color</string>
    <string name="settings_bars_hour">Hour</string>
    <string name="settings_bars_minute">Minute</string>
    <string name="settings_bars_second">Second</string>
    <string name="settings_bars_millisecond">Milli</string>
    <string name="settings_colorPickerButton">Pick Color</string>
    <string name="settings_bars_toastMessage_noneChecked">Please check at least one chrobar to display.</string>
    <string name="settings_bars_toastMessage_colorPickerInfo">Touch the center of the color wheel to confirm your color choice.</string>
    <string name="settings_bars_toastMessage_for3D">For 3D functionality, purchase the Full or Pro version of ChroBars from the Play Store.</string>
    <string name="settings_bars_toastMessage_forColorChange">To change the bar color, purchase the Full or Pro version of ChroBars from the Play Store.</string>
    <string name="settings_general_pickBackgroundColor">Change background color</string>
    <string name="settings_general_dimensions">3D Bars</string>
    <string name="settings_general_edges">Bar Wireframe Effect</string>
    <string name="settings_general_wireframe">Wireframe Mode</string>
    <string name="settings_general_margin_bar">Bar Gap</string>
    <string name="settings_general_margin_edge">Edge Gap</string>
    <string name="settings_general_displayNumbers">Display numbers</string>
    <string name="settings_general_numberSettings">Format numbers</string>
    <string name="settings_general_resetSettings">Load default settings</string>
    <string name="settings_general_reset_confirmTitle">Please confirm settings reset</string>
    <string name="settings_general_reset_confirmMessage">Are you sure you want to reset all settings to default values?</string>
    <string name="settings_general_EnableDisableDynLighting">Dynamic Lighting</string>
    <string name="settings_general_EnableDisableTwelveHourTime">12 Hour Time</string>
    <string-array name="settings_bars_edges_options">
        <item>Off</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    
    <!-- About information strings -->
    <string name="about_title">ChroBars Credits</string>
    <string name="about_team_member_jhyry">Jonathan Hyry\nLead Developer/Tester\nProject Management</string>
    <string name="about_team_member_tdolen">Travis Dolen\nTesting</string>
    <string name="about_team_member_klittle">Keith Little\nTesting</string>
    <string name="about_team_member_zhaberman">Zachary Haberman\nProject Management - Alpha Phase</string>
    <string name="about_team_member_dpolage">Daniel Polage\nExecutive Producer</string>
    <string name="about_version">Free Version</string>
    <string name="about_copyright">Copyright Daniel Polage, 2013</string>
    <string name="about_email">chrobars@gmail.com</string>
    <string name="about_email_description">To contact the team, please send us an email at:</string>
    
    <!-- Utility strings -->
	<string name="empty_str"></string>
	<string name="newline_str">/n</string>
	<string name="enabled">Enabled</string>
	<string name="disabled">Disabled</string>
	<string name="confirm">Yes</string>
	<string name="deny">No</string>
	
</resources>